--- a/rosetta_generator/pubspec.yaml
+++ b/rosetta_generator/pubspec.yaml
@@ -23,8 +23,9 @@ dependencies:
   path: ^1.6.2
   glob: ^1.1.0
   rosetta:
-    url: https://github.com/dschmucki/rosetta.git
-    path: rosetta
+    git:
+      url: https://github.com/dschmucki/rosetta.git
+      path: rosetta
 
 dev_dependencies:
   build_runner: ^1.6.1
